# TraceMyPlane

./: .gitignore  CMakeLists.txt  LICENSE  README.md  deploy.zsh
design/: github_deployment.odt
